--- a/index.html
+++ b/index.html
@@ -4,14 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="styles/style.sass">
+    <link rel="stylesheet" href="styles/style.css">
     <script src="main.js"></script>
     <title>Pablo Lacasta</title>
 </head>
 <body>
     <header>
+        <div class="dropdown">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+        </div>
 
     </header>
+    <h1>Hola,</h1>
+    <h1>soy Pablo Lacasta Sanchis</h1>
     <footer>
 
     </footer>
