botón menú dropdown

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <header>
         <div class="dropdown">
-            <div class="bar"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
+            <div class="bar"></div><br>
+            <div class="bar"></div><br>
+            <div class="bar"></div><br>
         </div>
 
     </header>
