--- a/index.html
+++ b/index.html
@@ -17,8 +17,13 @@
         </div>
 
     </header>
+    <div class="presentacion">
+    <div>   
     <h1>Hola,</h1>
-    <h1>soy Pablo Lacasta Sanchis</h1>
+    <h1>soy Pablo Lacasta Sanchis,</h1>
+    <h1>y soy FullStack Developer</h1>
+    </div> 
+    </div>
     <footer>
 
     </footer>
