--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Pablo Lacasta</title>
 </head>
 <body>
+    <div>
     <header>
         <div class="dropdown">
             <div class="bar"></div><br>
@@ -23,6 +24,7 @@
     <h1>soy Pablo Lacasta Sanchis,</h1>
     <h1>y soy FullStack Developer</h1>
     </div> 
+    </div>
     </div>
     <footer>
 
