Sobre mí. título y texto

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,26 +9,35 @@
     <script src="main.js"></script>
     <title>Pablo Lacasta</title>
 </head>
+
 <body>
     <div>
-    <header>
-        <div class="dropdown">
-            <div class="bar"></div><br>
-            <div class="bar"></div><br>
-            <div class="bar"></div><br>
-        </div>
+        <header>
+            <div class="dropdown">
+                <div class="bar"></div><br>
+                <div class="bar"></div><br>
+                <div class="bar"></div><br>
+            </div>
 
-    </header>
-    <div class="presentacion">
-    <div>   
-    <h1>Hola,</h1>
-    <h1>soy Pablo Lacasta Sanchis,</h1>
-    <h1>y soy FullStack Developer</h1>
-    </div> 
+        </header>
+
+        <div class="presentacion">
+            <div>
+                <h1>Hola,</h1>
+                <h1>soy Pablo Lacasta Sanchis,</h1>
+                <h1>y soy FullStack Developer</h1>
+            </div>
+        </div>
     </div>
+
+    <div class="sobreMi">
+        <h2>SOBRE MÍ</h2>
+        <div class="subrayado"></div>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi deleniti nesciunt illo mollitia veritatis facere aut debitis sapiente, voluptatibus consequuntur at libero quia quam amet labore quas, earum dolorum officia!</p>
     </div>
     <footer>
 
     </footer>
 </body>
+
 </html>
