cuadro de texto sobre mí, creado

--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
     <div class="sobreMi">
         <h2>SOBRE MÍ</h2>
         <div class="subrayado"></div>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi deleniti nesciunt illo mollitia veritatis facere aut debitis sapiente, voluptatibus consequuntur at libero quia quam amet labore quas, earum dolorum officia!</p>
+        <div class="cuadroTexto">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti eius, mollitia qui ipsa sint voluptas perferendis aliquam, dolores consequatur ullam autem quisquam iure ab. Pariatur aliquid perferendis earum alias maxime?
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid omnis quis, tenetur vel sapiente placeat corporis ad laudantium beatae exercitationem cum eaque quibusdam maiores nostrum saepe, eius corrupti libero unde.
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi deleniti nesciunt illo mollitia veritatis facere aut debitis sapiente, voluptatibus consequuntur at libero quia quam amet labore quas, earum dolorum officia!</p>
+        </div>
     </div>
     <footer>
 
