bloque tecnologías. Cambio de tipografía

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Lora|Titillium+Web|Vollkorn&display=swap" rel="stylesheet">
     <script src="main.js"></script>
     <title>Pablo Lacasta</title>
 </head>
@@ -22,7 +23,7 @@
         </header>
 
         <div class="presentacion">
-            <div>
+            <div class="textoPresentacion">
                 <h1>Hola,</h1>
                 <h1>soy Pablo Lacasta Sanchis,</h1>
                 <h1>y soy FullStack Developer</h1>
@@ -32,12 +33,16 @@
 
     <div class="sobreMi">
         
-        <h2>SOBRE MÍ</h2>
+        <h1>SOBRE MÍ</h1>
         <div class="cuadroTexto">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti eius, mollitia qui ipsa sint voluptas perferendis aliquam, dolores consequatur ullam autem quisquam iure ab. Pariatur aliquid perferendis earum alias maxime?
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid omnis quis, tenetur vel sapiente placeat corporis ad laudantium beatae exercitationem cum eaque quibusdam maiores nostrum saepe, eius corrupti libero unde.
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi deleniti nesciunt illo mollitia veritatis facere aut debitis sapiente, voluptatibus consequuntur at libero quia quam amet labore quas, earum dolorum officia!</p>
         </div>
+
+    </div>
+    <div class="tecnologias">
+        <h1>TECNOLOGÍAS</h1>
     </div>
     <footer>
 
