imagenes de tecnologías colocadas

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Lora|Titillium+Web|Vollkorn&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lora|Merriweather&display=swap" rel="stylesheet">  
     <script src="main.js"></script>
     <title>Pablo Lacasta</title>
 </head>
@@ -43,6 +43,35 @@
     </div>
     <div class="tecnologias">
         <h1>TECNOLOGÍAS</h1>
+        <div class="frontend">
+            <img src="./images/frontend/angular.png" alt="angular">
+            <img src="/images/frontend/bootstrap.png" alt="bootstrap">
+            <img src="/images/frontend/css.png" alt="css">
+            <img src="/images/frontend/html.png" alt="css">
+            <img src="/images/frontend/jquery.png" alt="jquery">
+            <img src="/images/frontend/js.png" alt="js">
+            <img src="/images/frontend/materialDesign.png" alt="materialDesign">
+            <img src="/images/frontend/react.png" alt="react">
+            <img src="/images/frontend/sass.png" alt="sass">
+        </div>
+        <div class="backend">
+            <img src="/images/backend/express.png" alt="express">
+            <img src="/images/backend/js.png" alt="js">
+            <img src="/images/backend/laravel.png" alt="laravel">
+            <img src="/images/backend/mongodb.png" alt="mongodb">
+            <img src="/images/backend/mysql.png" alt="mysql">
+            <img src="/images/backend/node.png" alt="node">
+            <img src="/images/backend/php.png" alt="php">
+            <img src="/images/backend/postman.png" alt="postman">
+            <img src="/images/backend/robo3t.png" alt="robo3t">
+        </div>
+        <div class="otros">
+            <img src="/images/otros/descargaheroku.png" alt="heroku">
+            <img src="/images/otros/git.png" alt="git">
+            <img src="/images/otros/github.png" alt="github">
+            <img src="/images/otros/npm.png" alt="npm">
+            <img src="/images/otros/typescript.png" alt="typescript">
+        </div>
     </div>
     <footer>
 
