drop menu hover y fixed

--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Lora|Merriweather&display=swap" rel="stylesheet">  
+    <link href="https://fonts.googleapis.com/css?family=Lora|Merriweather&display=swap" rel="stylesheet">
     <script src="main.js"></script>
     <title>Pablo Lacasta</title>
 </head>
 
 <body>
     <div>
-        <header>
-            <div class="dropdown">
-                <div class="bar"></div><br>
-                <div class="bar"></div><br>
-                <div class="bar"></div><br>
-            </div>
 
-        </header>
+        <div class="dropdown">
+            <div class="bar"></div><br>
+            <div class="bar"></div><br>
+            <div class="bar"></div><br>
+        </div>
+
+
 
         <div class="presentacion">
             <div class="textoPresentacion">
@@ -32,45 +32,57 @@
     </div>
 
     <div class="sobreMi">
-        
+
         <h1>SOBRE MÍ</h1>
         <div class="cuadroTexto">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti eius, mollitia qui ipsa sint voluptas perferendis aliquam, dolores consequatur ullam autem quisquam iure ab. Pariatur aliquid perferendis earum alias maxime?
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid omnis quis, tenetur vel sapiente placeat corporis ad laudantium beatae exercitationem cum eaque quibusdam maiores nostrum saepe, eius corrupti libero unde.
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi deleniti nesciunt illo mollitia veritatis facere aut debitis sapiente, voluptatibus consequuntur at libero quia quam amet labore quas, earum dolorum officia!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti eius, mollitia qui ipsa sint voluptas
+                perferendis aliquam, dolores consequatur ullam autem quisquam iure ab. Pariatur aliquid perferendis
+                earum alias maxime?
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid omnis quis, tenetur vel sapiente
+                placeat corporis ad laudantium beatae exercitationem cum eaque quibusdam maiores nostrum saepe, eius
+                corrupti libero unde.
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi deleniti nesciunt illo mollitia
+                veritatis facere aut debitis sapiente, voluptatibus consequuntur at libero quia quam amet labore quas,
+                earum dolorum officia!</p>
         </div>
 
     </div>
     <div class="tecnologias">
         <h1>TECNOLOGÍAS</h1>
-        <div class="frontend">
-            <img src="./images/frontend/angular.png" alt="angular">
-            <img src="/images/frontend/bootstrap.png" alt="bootstrap">
-            <img src="/images/frontend/css.png" alt="css">
-            <img src="/images/frontend/html.png" alt="css">
-            <img src="/images/frontend/jquery.png" alt="jquery">
-            <img src="/images/frontend/js.png" alt="js">
-            <img src="/images/frontend/materialDesign.png" alt="materialDesign">
-            <img src="/images/frontend/react.png" alt="react">
-            <img src="/images/frontend/sass.png" alt="sass">
-        </div>
-        <div class="backend">
-            <img src="/images/backend/express.png" alt="express">
-            <img src="/images/backend/js.png" alt="js">
-            <img src="/images/backend/laravel.png" alt="laravel">
-            <img src="/images/backend/mongodb.png" alt="mongodb">
-            <img src="/images/backend/mysql.png" alt="mysql">
-            <img src="/images/backend/node.png" alt="node">
-            <img src="/images/backend/php.png" alt="php">
-            <img src="/images/backend/postman.png" alt="postman">
-            <img src="/images/backend/robo3t.png" alt="robo3t">
-        </div>
-        <div class="otros">
-            <img src="/images/otros/descargaheroku.png" alt="heroku">
-            <img src="/images/otros/git.png" alt="git">
-            <img src="/images/otros/github.png" alt="github">
-            <img src="/images/otros/npm.png" alt="npm">
-            <img src="/images/otros/typescript.png" alt="typescript">
+        <div class="bloquesTecnologias">
+            <h3>FRONTEND</h3>
+            <div class="frontend">
+                <img src="./images/frontend/angular.png" alt="angular">
+                <img src="/images/frontend/react.png" alt="react">
+                <img src="/images/frontend/css.png" alt="css">
+                <img src="/images/frontend/sass.png" alt="sass">
+                <img src="/images/frontend/html.png" alt="html">
+                <img src="/images/frontend/bootstrap.png" alt="bootstrap">
+                <img src="/images/frontend/materialDesign.png" alt="materialDesign">
+                <img src="/images/frontend/jquery.png" alt="jquery">
+                <img src="/images/frontend/js.png" alt="js">
+            </div>
+            <h3>BACKEND</h3>
+            <div class="backend">
+                <img src="/images/backend/express.png" alt="express">
+                <img src="/images/backend/node.png" alt="node">
+                <img src="/images/backend/js.png" alt="js">
+                <img src="/images/backend/php.png" alt="php">
+                <img src="/images/backend/laravel.png" alt="laravel">
+                <img src="/images/backend/mongodb.png" alt="mongodb">
+                <img src="/images/backend/robo3t.png" alt="robo3t">
+                <img src="/images/backend/mysql.png" alt="mysql">
+                <img src="/images/backend/postman.png" alt="postman">
+            </div>
+            <h3>OTROS</h3>
+            <div class="otros">
+                <img src="/images/otros/descargaheroku.png" alt="heroku">
+                <img src="/images/otros/git.png" alt="git">
+                <img src="/images/otros/github.png" alt="github">
+                <img src="/images/otros/npm.png" alt="npm">
+                <img src="/images/otros/typescript.png" alt="typescript">
+                <img src="/images/otros/wordpress.png" alt="wordpress">
+            </div>
         </div>
     </div>
     <footer>
