añadidos los nombres de cada tecnología . Añadido Trello

--- a/index.html
+++ b/index.html
@@ -52,36 +52,139 @@
         <div class="bloquesTecnologias">
             <h3>FRONTEND</h3>
             <div class="frontend">
-                <img src="./images/frontend/angular.png" alt="angular">
-                <img src="/images/frontend/react.png" alt="react">
-                <img src="/images/frontend/css.png" alt="css">
-                <img src="/images/frontend/sass.png" alt="sass">
-                <img src="/images/frontend/html.png" alt="html">
-                <img src="/images/frontend/bootstrap.png" alt="bootstrap">
-                <img src="/images/frontend/materialDesign.png" alt="materialDesign">
-                <img src="/images/frontend/jquery.png" alt="jquery">
-                <img src="/images/frontend/js.png" alt="js">
+                <div class="imagenTecnologia">
+                    <img src="./images/frontend/angular.png" alt="angular">
+                    <span>Angular</span>
+                </div>
+                <div class="imagenTecnologia">
+                    <img src="/images/frontend/react.png" alt="react">
+                    <span>React</span>
+
+                </div>
+                <div class="imagenTecnologia">
+                    <img src="/images/frontend/css.png" alt="css">
+                    <span>CSS</span>
+
+                </div>
+                <div class="imagenTecnologia">
+                    <img src="/images/frontend/sass.png" alt="sass">
+                    <span>SASS</span>
+
+                </div>
+                <div class="imagenTecnologia">
+                    <img src="/images/frontend/bootstrap.png" alt="bootstrap">
+                    <span>Bootstrap</span>
+
+                </div>
+                <div class="imagenTecnologia">
+                    <img src="/images/frontend/materialDesign.png" alt="materialDesign">
+                    <span>Material</span>
+                    <span>Design</span>
+
+                </div>
+                <div class="imagenTecnologia">
+                    <img src="/images/frontend/html.png" alt="html">
+                    <span>HTML</span>
+
+                </div>
+                <div class="imagenTecnologia">
+                    <img src="/images/frontend/jquery.png" alt="jquery">
+                    <span>JQuery</span>
+
+                </div>
+                <div class="imagenTecnologia">
+                    <img src="/images/frontend/js.png" alt="js">
+                    <span>JavaScript</span>
+
+                </div>
             </div>
             <h3>BACKEND</h3>
             <div class="backend">
-                <img src="/images/backend/express.png" alt="express">
-                <img src="/images/backend/node.png" alt="node">
-                <img src="/images/backend/js.png" alt="js">
-                <img src="/images/backend/php.png" alt="php">
-                <img src="/images/backend/laravel.png" alt="laravel">
-                <img src="/images/backend/mongodb.png" alt="mongodb">
-                <img src="/images/backend/robo3t.png" alt="robo3t">
-                <img src="/images/backend/mysql.png" alt="mysql">
-                <img src="/images/backend/postman.png" alt="postman">
+
+                <div class="imagenTecnologia">
+                    <img src="/images/backend/express.png" alt="express">
+                    <span>Express</span>
+
+                </div>
+                <div class="imagenTecnologia">
+                    <img src="/images/backend/node.png" alt="node">
+                    <span>Node.js</span>
+
+                </div>
+                <div class="imagenTecnologia">
+                    <img src="/images/backend/js.png" alt="js">
+                    <span>JavaScript</span>
+
+                </div>
+                <div class="imagenTecnologia">
+                    <img src="/images/backend/php.png" alt="php">
+                    <span>PHP</span>
+
+                </div>
+                <div class="imagenTecnologia">
+                    <img src="/images/backend/laravel.png" alt="laravel">
+                    <span>Laravel</span>
+
+                </div>
+                <div class="imagenTecnologia">
+                    <img src="/images/backend/mongodb.png" alt="mongodb">
+                    <span>MongoDB</span>
+
+                </div>
+                <div class="imagenTecnologia">
+                    <img src="/images/backend/robo3t.png" alt="robo3t">
+                    <span>Robo3T</span>
+
+                </div>
+                <div class="imagenTecnologia">
+                    <img src="/images/backend/mysql.png" alt="mysql">
+                    <span>MySQL</span>
+
+                </div>
+                <div class="imagenTecnologia">
+                    <img src="/images/backend/postman.png" alt="postman">
+                    <span>PostMan</span>
+
+                </div>
             </div>
             <h3>OTROS</h3>
             <div class="otros">
-                <img src="/images/otros/descargaheroku.png" alt="heroku">
-                <img src="/images/otros/git.png" alt="git">
-                <img src="/images/otros/github.png" alt="github">
-                <img src="/images/otros/npm.png" alt="npm">
-                <img src="/images/otros/typescript.png" alt="typescript">
-                <img src="/images/otros/wordpress.png" alt="wordpress">
+                <div class="imagenTecnologia">
+                    <img src="/images/otros/descargaheroku.png" alt="heroku">
+                    <span>Heroku</span>
+
+                </div>
+                <div class="imagenTecnologia">
+                    <img src="/images/otros/git.png" alt="git">
+                    <span>Git</span>
+
+                </div>
+                <div class="imagenTecnologia">
+                    <img src="/images/otros/github.png" alt="github">
+                    <span>GitHub</span>
+
+                </div>
+                <div class="imagenTecnologia">
+                    <img src="/images/otros/npm.png" alt="npm">
+                    <span>npm</span>
+
+                </div>
+                <div class="imagenTecnologia">
+                    <img src="/images/otros/typescript.png" alt="typescript">
+                    <span>TypeSript</span>
+
+                </div>
+                <div class="imagenTecnologia">
+                    <img src="/images/otros/wordpress.png" alt="wordpress">
+                    <span>WordPress</span>
+
+                </div>
+                <div class="imagenTecnologia">
+                        <img src="/images/otros/trello.png" alt="Trello">
+                        <span>Trello</span>
+    
+                    </div>
+
             </div>
         </div>
     </div>
@@ -90,4 +193,4 @@
     </footer>
 </body>
 
-</html>
+</html> 
