Proyectos a falta de poner proyectos

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="textoPresentacion">
                 <h1>Hola,</h1>
                 <h1>soy Pablo Lacasta Sanchis,</h1>
-                <h1>y soy FullStack Developer</h1>
+                <h1>y soy FullStack Developer.</h1>
             </div>
         </div>
     </div>
@@ -188,6 +188,10 @@
 
             </div>
         </div>
+    </div>
+
+    <div class="misProyectos">
+        <h1>MIS PROYECTOS</h1>
     </div>
     <footer>
 
