Fuente sobremi cambiada

--- a/index.html
+++ b/index.html
@@ -175,6 +175,12 @@
                     <span>TypeSript</span>
 
                 </div>
+
+                <div class="imagenTecnologia">
+                    <img src="/images/otros/docker.png" alt="Docker">
+                    <span>Docker</span>
+
+                </div>
                 <div class="imagenTecnologia">
                     <img src="/images/otros/wordpress.png" alt="wordpress">
                     <span>WordPress</span>
@@ -190,7 +196,7 @@
         </div>
     </div>
 
-    <div class="misProyectos">
+    <div id="misProyectos" class="misProyectos">
         <h1>MIS PROYECTOS</h1>
     </div>
     <footer>
