--- a/index.html
+++ b/index.html
@@ -200,6 +200,23 @@
         <h1>MIS PROYECTOS</h1>
     </div>
     <footer>
+        <h2>¡No dudes en contactar conmigo!</h2>
+
+        <div class="contacto">
+        <a href="https://www.linkedin.com/in/pablo-lacasta-sanchis-6544a2159/" >
+            <img class="linkedin" src="/images/linkedin.png" alt="Linkedin">
+        </a>
+
+        <a href="https://github.com/pabloLacasta" >
+            <img class="gitHub" src="/images/github.png" alt="GitHub">
+        </a>
+
+        <a href="https://github.com/pabloLacasta" >
+            <img class="email" src="/images/email.png" alt="Email">
+        </a>
+        </div>
+
+        
 
     </footer>
 </body>
