--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles/style.css">
     <link href="https://fonts.googleapis.com/css?family=Lora|Merriweather&display=swap" rel="stylesheet">
     <script src="main.js"></script>
-    <title>Pablo Lacasta</title>
+    <title>Pablo Lacasta Sanchis - FullStack Developer</title>
 </head>
 
 <body>
