--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li ><a href="#tecnologias">Tecnologías</a></li>
                 <li ><a href="#misProyectos">Mis Proyectos</a></li>
                 <li ><a href="#contacto">Contacto</a></li>
-                <li >
+                <li class="cerrarContainer">
                     <img  class ="cerrar" src="/images/closeDM.png" alt="Cerar">
                 </li>
             </div>
@@ -47,7 +47,6 @@
     <div id="sobreMi" class="sobreMi">
 
         <h1>SOBRE MÍ</h1>
-        <a href="#presentacion">sas</a>
         <div class="cuadroTexto">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti eius, mollitia qui ipsa sint voluptas
                 perferendis aliquam, dolores consequatur ullam autem quisquam iure ab. Pariatur aliquid perferendis
