font weight span

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
                 </div>
             </div>
             <div class="dropdownMenu">
-                <li class="enlace"><a  class="enlace" href="#presentacion">Presentación</a></li>
-                <li class="enlace"><a class="enlace" href="#sobreMi">Sobre Mí</a></li>
-                <li class="enlace"><a class="enlace" href="#tecnologias">Tecnologías</a></li>
-                <li class="enlace"><a class="enlace" href="#misProyectos">Mis Proyectos</a></li>
-                <li class="enlace"><a class="enlace" href="#contacto">Contacto</a></li>
+                <li class="enlaceContainer"><a  class="enlace" href="#presentacion">Presentación</a></li>
+                <li class="enlaceContainer"><a class="enlace" href="#sobreMi">Sobre Mí</a></li>
+                <li class="enlaceContainer"><a class="enlace" href="#tecnologias">Tecnologías</a></li>
+                <li class="enlaceContainer"><a class="enlace" href="#misProyectos">Mis Proyectos</a></li>
+                <li class="enlaceContainer"><a class="enlace" href="#contacto">Contacto</a></li>
                 <li class="cerrarContainer enlace">
                     <img  class ="cerrar" src="/images/closeDM.png" alt="Cerar">
                 </li>
