dm casi terminado

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
                 </div>
             </div>
             <div class="dropdownMenu">
-                <li class="enlaceContainer"><a  class="enlace" href="#presentacion">Presentación</a></li>
-                <li class="enlaceContainer"><a class="enlace" href="#sobreMi">Sobre Mí</a></li>
-                <li class="enlaceContainer"><a class="enlace" href="#tecnologias">Tecnologías</a></li>
-                <li class="enlaceContainer"><a class="enlace" href="#misProyectos">Mis Proyectos</a></li>
-                <li class="enlaceContainer"><a class="enlace" href="#contacto">Contacto</a></li>
-                <li class="cerrarContainer enlace">
+                <a id="dropMenuComponent"  class="enlace" href="#presentacion">Presentación</a>
+                <a id="dropMenuComponent"  class="enlace" href="#sobreMi">Sobre Mí</a>
+                <a id="dropMenuComponent"  class="enlace" href="#tecnologias">Tecnologías</a>
+                <a id="dropMenuComponent"  class="enlace" href="#misProyectos">Mis Proyectos</a>
+                <a id="dropMenuComponent"  class="enlace" href="#contacto">Contacto</a>
+                <div id="dropMenuComponent"  class="cerrarContainer">
                     <img  class ="cerrar" src="/images/closeDM.png" alt="Cerar">
-                </li>
+                
             </div>
         </header>
 
@@ -42,7 +42,9 @@
                 <h1>y soy FullStack Developer.</h1>
             </div>
         </div>
-    </d>
+    </div>
+
+    <div class="dropdownBlack">
 
     <div id="sobreMi" class="sobreMi">
 
@@ -211,6 +213,7 @@
     <div id="misProyectos" class="misProyectos">
         <h1>MIS PROYECTOS</h1>
     </div>
+</div>
     <footer id="contacto">
         <h2>¡No dudes en contactar conmigo!</h2>
 
