email contacto cambiado

--- a/index.html
+++ b/index.html
@@ -226,9 +226,7 @@
                 <img class="gitHub" src="/images/github.png" alt="GitHub">
             </a>
 
-            <a href="https://github.com/pabloLacasta">
-                <img class="email" src="/images/email.png" alt="Email">
-            </a>
+            <span>bapalnas@gmail.com</span>
         </div>
 
 
