--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
     </footer>
 </body>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script src="main.js"></script>
 
 </html>
