--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <a id="dropMenuComponent"  class="enlace" href="#tecnologias">Tecnologías</a>
                 <a id="dropMenuComponent"  class="enlace" href="#misProyectos">Mis Proyectos</a>
                 <a id="dropMenuComponent"  class="enlace" href="#contacto">Contacto</a>
+                <a id="dropMenuComponent" target="blank" href="https://drive.google.com/file/d/1GqGTdgD1yrsjxEe3S7nbqTq1l3YzBqUE/view?usp=sharing">CV</a>
                 <div id="dropMenuComponent"  class="cerrarContainer">
                     <img  class ="cerrar" src="/images/closeDM.png" alt="Cerar">
                 
