moviesApp en proceso

--- a/index.html
+++ b/index.html
@@ -36,18 +36,18 @@
 
 
 
-        <div id="presentacion" class="presentacion">
+        <section data-section = "0" id="presentacion" class="presentacion">
             <div class="textoPresentacion">
                 <h1>Hola,</h1>
                 <h1>soy Pablo Lacasta Sanchis,</h1>
                 <h1>y soy FullStack Developer.</h1>
             </div>
-        </div>
+        </section>
     </div>
 
     <div class="dropdownBlack">
 
-    <div id="sobreMi" class="sobreMi">
+    <section data-section = "1" id="sobreMi" class="sobreMi">
 
         <h1>SOBRE MÍ</h1>
         <div class="cuadroTexto">
@@ -62,8 +62,8 @@
                 earum dolorum officia!</p>
         </div>
 
-    </div>
-    <div id="tecnologias" class="tecnologias">
+    </section>
+    <section data-section = "2" id="tecnologias" class="tecnologias">
         <h1>TECNOLOGÍAS</h1>
         <div class="bloquesTecnologias">
             <h3>FRONTEND</h3>
@@ -209,21 +209,47 @@
 
             </div>
         </div>
-    </div>
+    </section>
 
-    <div id="misProyectos" class="misProyectos">
+    <section data-section = "3" id="misProyectos" class="misProyectos">
         <h1>MIS PROYECTOS</h1>
+        <div class="moviesApp">
+         
+            <div class="fondoGris" href="https://moviesapp-mean.herokuapp.com">
+                <span>MoviesApp</span>
+                <div class="tecs">
+                    <div id ="tec" class="mongo">
+                        <img id = "imgTec" src="/images/backend/mongodb.png" alt="Mongo" class="imgMongo">
+                        <span>M</span>
+                    </div>
+                    <div id ="tec" class="express">
+                        <img id = "imgTec"  src="/images/backend/express.png" alt="Express" class="imgExpress">
+                        <span>E</span>
+                    </div>
+                    <div id ="tec" class="angular">
+                        <img id = "imgTec" src="/images/frontend/angular.png" alt="Angular" class="imgAngular">
+                        <span>A</span>
+                    </div>
+                    <div id ="tec" class="node">
+                        <img id = "imgTec" src="/images/backend/node.png" alt="Node" class="imgNode">
+                        <span>N</span>
+                    </div>
+                </div>
+                <!-- <img src="/images/Proyectos/MoviesApp.PNG" alt="moviesApp" class="imgMoviesApp"> -->
+            </div>
+        
     </div>
+    </section>
 </div>
     <footer id="contacto">
         <h2>¡No dudes en contactar conmigo!</h2>
 
         <div class="contacto">
-            <a href="https://www.linkedin.com/in/pablo-lacasta-sanchis-6544a2159/">
+            <a target="blank" href="https://www.linkedin.com/in/pablo-lacasta-sanchis-6544a2159/">
                 <img class="linkedin" src="/images/linkedin.png" alt="Linkedin">
             </a>
 
-            <a href="https://github.com/pabloLacasta">
+            <a target="blank" href="https://github.com/pabloLacasta">
                 <img class="gitHub" src="/images/github.png" alt="GitHub">
             </a>
 
