--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
         <h1>MIS PROYECTOS</h1>
         <div class="moviesApp">
          
-            <div class="fondoGris" href="https://moviesapp-mean.herokuapp.com">
-                <span>MoviesApp</span>
+            <div class="fondoGris" >
+                <a href="https://moviesapp-mean.herokuapp.com" target="blank"> MoviesApp </a>
                 <div class="tecs">
                     <div id ="tec" class="mongo">
                         <img id = "imgTec" src="/images/backend/mongodb.png" alt="Mongo" class="imgMongo">
