--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <a id="dropMenuComponent" class="dropMenuComponent5"  href="#contacto">Contacto</a>
                 <a id="dropMenuComponent" class="dropMenuComponent6"  target="blank"
                     href="https://drive.google.com/file/d/1KIBSWN5A28cNUbYdsIkiIHIY3s7iZ2HW/view?usp=sharing">CV</a>
-                    <a id="dropMenuComponentClose" class="dropMenuComponent7"  >
+                    <a id="dropMenuComponent" class="dropMenuComponent7"  >
                         <img class="cerrar" src="/images/closeDM.png" alt="Cerrar">
                     </a>
             </div>
