--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <a id="dropMenuComponent" class="dropMenuComponent4" href="#misProyectos">Mis Proyectos</a>
                 <a id="dropMenuComponent" class="dropMenuComponent5" href="#contacto">Contacto</a>
                 <a id="dropMenuComponent" class="dropMenuComponent6" target="blank"
-                    href="https://drive.google.com/file/d/1KIBSWN5A28cNUbYdsIkiIHIY3s7iZ2HW/view?usp=sharing">CV</a>
+                    href="https://drive.google.com/file/d/1KyfPXP0u4jfEhUfBksIvldnWnIqjAxQn/view?usp=sharing">CV</a>
                 <a id="dropMenuComponent" class="dropMenuComponent7">
                     <img class="cerrar" src="/images/closeDM.png" alt="Cerrar">
                 </a>
@@ -65,7 +65,7 @@
                         Actualmente estoy cursando el Bootcamp de FullStack-Developer en GeeksHubs Academy. Se trata de
                         un curso intensivo, totalmente práctico y en el que llevo tres meses programando con las
                         tecnologías más modernas y demandadas en el mercado. Este Bootcamp me ha ayudado a reafirmar mi
-                        amor por la programación, a trabajar en equipo y a crear proyectos innovadores junto con mis
+                        pasión por la programación, a trabajar en equipo y a crear proyectos innovadores junto con mis
                         compañeros.
 
                     </p>
